# BerkeleyDashboard

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/dashboard/: __init__.py  config.py  main.py  mqtt_bridge.py
src/dashboard/api/: __init__.py  server.py
src/dashboard/static/internal/: index.html
src/dashboard/static/public/: index.html
