[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "berkeley-dashboard"
version = "0.1.0"
description = "Berkeley Home Intelligence Platform — Internal + Public Web Dashboard"
requires-python = ">=3.11"

dependencies = [
    "aiomqtt>=2.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.2",
]

[project.scripts]
berkeley-dashboard = "dashboard.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]

[tool.hatch.envs.default]
python = "3.11"
